调整包结构